--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ external_link:
   field: site # Apply to the whole site
   exclude: ''
 filename_case: 0
-render_drafts: false
+render_drafts: true
 post_asset_folder: true
 relative_link: false
 future: true
@@ -105,3 +105,13 @@ theme: next
 deploy:
   type: git
   repo: https://github.com/yumendy/yumendy.github.io
+
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
+  exclude_codeblock: true
+  awl: 2
+  wpm: 275
+  suffix: "mins."
