--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://yumendy.github.io/
+url: http://yumendy.cn/
 root: /
-permalink: :year/:month/:day/:hash/
+permalink: :year/:month/:hash/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
