香辣鱿鱼虾

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -72,7 +72,7 @@ footer:
   # Beian ICP and gongan information for Chinese users. See: https://beian.miit.gov.cn, http://www.beian.gov.cn
   beian:
     enable: true
-    icp: 粤ICP备2020132655号-1
+    icp: 粤ICP备2020132655号
     # The digit in the num of gongan beian.
     gongan_id: 44030602005287
     # The full num of gongan beian.
